docker-registry/namespace.yml
# 1-registry-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry
